--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   </script>
 
   <title>TREND FutureDev </title>
-  <link rel="icon" href="/videos/WhatsApp Image 2022-08-16 at 4.09.39 PM.jpeg">
+  <link rel="icon" href="/skssf-trend/videos/WhatsApp Image 2022-08-16 at 4.09.39 PM.jpeg">
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
