--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
             </div>
             <div>
               <h3 style="color: black;">Web Development</h3>
-              <p>in Python / Node.js / PHP / .Net / Java / Go / Ruby</p>
+              <p style="color: gray;">in Python / Node.js / PHP / .Net / Java / Go / Ruby</p>
             </div>
           </div>
 
@@ -364,7 +364,7 @@
             </div>
             <div>
               <h3 style="color: black;">Mobile App Development</h3>
-              <p>In Kotlin Android / iOS / Flutter / React - Native</p>
+              <p style="color: gray;">In Kotlin Android / iOS / Flutter / React - Native</p>
 
             </div>
           </div>
