--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 
     <div class="container">
       
-      <div class="row" style="padding-left: 40px;">
+      <div class="row">
 
         <div class="col-12 mt-4 text-center ">
           <!-- <h1 class=" site-logo"><a href="index.html" class="text-black h2 ">SPS<span class="text-primary">.</span> </a> -->
