--- a/index.html
+++ b/index.html
@@ -35,25 +35,25 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <!-- Primary Meta Tags -->
-  <meta name="title" content="BROTOTYPE | BROTHER YOU NEVER HAD">
+  <meta name="title" content="TREND FutureDev">
   <meta name="description"
-    content="Brototype helps the young Indian generation who had benefited nothing from our country’s poor education system by providing an intensive industry relevant training on the leading software technologies.">
+    content="TREND FutureDev helps the young Indian generation who had benefited nothing from our country’s poor education system by providing an intensive industry relevant training on the leading software technologies.">
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://brototype.in/">
-  <meta property="og:title" content="BROTOTYPE | BROTHER YOU NEVER HAD">
+  <meta property="og:url" content="https://skssf-trend.github.io/Trend-FutureDev/">
+  <meta property="og:title" content="TREND FutureDev">
   <meta property="og:description"
-    content="Brototype helps the young Indian generation who had benefited nothing from our country’s poor education system by providing an intensive industry relevant training on the leading software technologies.">
-  <meta property="og:image" content="https://brototype.in/brototype.jpg">
+    content="TREND FutureDev helps the young Indian generation who had benefited nothing from our country’s poor education system by providing an intensive industry relevant training on the leading software technologies.">
+  <meta property="og:image" content="http://photostock.skssf.in/preview/111599.jpg">
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image">
-  <meta property="twitter:url" content="https://brototype.in/">
-  <meta property="twitter:title" content="BROTOTYPE | BROTHER YOU NEVER HAD">
+  <meta property="twitter:url" content="https://skssf-trend.github.io/Trend-FutureDev/">
+  <meta property="twitter:title" content="TREND FutureDev">
   <meta property="twitter:description"
-    content="Brototype helps the young Indian generation who had benefited nothing from our country’s poor education system by providing an intensive industry relevant training on the leading software technologies.">
-  <meta property="twitter:image" content="https://brototype.in/brototype.jpg">
+    content="TREND FutureDev helps the young Indian generation who had benefited nothing from our country’s poor education system by providing an intensive industry relevant training on the leading software technologies.">
+  <meta property="twitter:image" content="http://photostock.skssf.in/preview/111599.jpg">
 
   
 
