--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
   <meta property="og:title" content="TREND FutureDev">
   <meta property="og:description"
     content="TREND FutureDev helps the young Indian generation who had benefited nothing from our country’s poor education system by providing an intensive industry relevant training on the leading software technologies.">
-  <meta property="og:image" content="http://photostock.skssf.in/preview/111599.jpg">
+  <meta property="og:image" content="https://i.ibb.co/9cDk2sG/Whats-App-Image-2022-08-16-at-4-09-39-PM.jpg">
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image">
@@ -53,7 +53,7 @@
   <meta property="twitter:title" content="TREND FutureDev">
   <meta property="twitter:description"
     content="TREND FutureDev helps the young Indian generation who had benefited nothing from our country’s poor education system by providing an intensive industry relevant training on the leading software technologies.">
-  <meta property="twitter:image" content="http://photostock.skssf.in/preview/111599.jpg">
+  <meta property="twitter:image" content="https://i.ibb.co/9cDk2sG/Whats-App-Image-2022-08-16-at-4-09-39-PM.jpg">
 
   
 
