--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                     style="padding: 0.1rem;"></span></sub></a>
 
               </h2>
-          <h3 style="color: rgb(88, 88, 88);" ><B>SKSSF</B><h3>
+          <h3 style="color: rgb(88, 88, 88); padding-right: 20px;" ><B>SKSSF</B><h3>
 
         </div>
       </div>
