--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
 
      <div class="feature-big">
       <div class="container">
-        <!-- <div class="row mb-5 site-section border-bottom"> -->
+        <!--<div class="row mb-5 site-section border-bottom"> -->
           <!-- <div class="col-lg-7"> -->
 
 
@@ -247,7 +247,7 @@
 
 
           <!-- </div> -->
-          <div class="">
+          <div class="col-lg-12 pr-lg-12 mr-auto mt-5 ">
             <h2 class="" style="color: black;">TREND Future Development in Brief?</h2>
             <p class="mb-4" style="color: rgb(122, 122, 122);"><B>ഭാവി എന്നു പറയുന്നത് നാം ഇന്ന് എടുക്കുന്ന തീരുമാ നങ്ങളുടെ പ്രതിഫലനമാണ്. 
                     അതിനാൽ ലോകം ഇന്ന് എവിടെ എത്തി നിൽക്കുന്നു എന്ന് തിരിച്ചറിവിൽ നിന്ന് വേണം നാം ഓരോ തീരുമാനങ്ങളും എടുക്കാൻ. 
@@ -267,7 +267,7 @@
           <div class="col-lg-12 pr-lg-12 mr-auto mt-5 order-2 order-lg-1">
             <div class="container">
               <h2 class="pb-3 pt-2 border-bottom mb-5 text-black">Life at Trend FutureDev</h2>
-              <p>SPS is built on 3 principles i.e Open Material Education, Self Learning and Peer to peer Learning</p>
+              <p>Trend FutureDev is built on 3 principles i.e Open Material Education, Self Learning and Peer to peer Learning</p>
               <!--first section-->
               <div class="row align-items-center how-it-works d-flex">
                 <div class="col-2 text-center bottom d-inline-flex justify-content-center align-items-center">
