--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 
 
-<!-- Mirrored from brototype.in/ by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 25 Aug 2022 14:51:38 GMT -->
-<!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=utf-8" /><!-- /Added by HTTrack -->
+
+<meta http-equiv="content-type" content="text/html;charset=utf-8" />
 <head>
   <link rel="stylesheet" href="path/to/plyr.css" />
 
@@ -125,7 +125,7 @@
               </h2>
               <h3>
               <span style="font-size: 1rem;font-weight: 500;"></span><span style="font-size: 1.2rem;">&nbsp;<span
-                style="background: rgb(29, 1, 68);color: white;padding: 0.2rem; letter-spacing: 8px;"><b>SKSSF</b></span><span
+                style="background: rgb(11, 1, 29);color: white;padding: 0.2rem; letter-spacing: 9px;"><b>SKSSF</b></span><span
                 style="padding: 0.1rem;"></span></sub></a></h3>
                 
          
@@ -270,7 +270,7 @@
           <div class="col-lg-12 pr-lg-12 mr-auto mt-5 order-2 order-lg-1">
             <div class="container">
               <h2 class="pb-3 pt-2 border-bottom mb-5 " style="color: rgb(29, 1, 68);">Roadmap</h2>
-              <p>Trend FutureDev is built on 3 principles i.e Open Material Education, Self Learning and Peer to peer Learning</p>
+              <p>Here is a summary of our programme in general.</p>
               <!--first section-->
               <div class="row align-items-center how-it-works d-flex">
                 <div class="col-2 text-center bottom d-inline-flex justify-content-center align-items-center">
@@ -338,7 +338,7 @@
     <div class="container">
       <div class="row mb-5">
         <div class="col-12 text-center">
-          <h2 class="section-title mb-3 text-left" style="color: rgb(59 3 135);">What Domains You Can Choose</h2>
+          <h2 class="section-title mb-3 text-left" style="color: rgb(29, 1, 68);">What Domains You Can Choose</h2>
         </div>
       </div>
       <div class="row align-items-stretch">
@@ -645,7 +645,7 @@
     <div class="row ">
 
       <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 feature-big faq-or">
-        <h2 class="pb-3 pt-2 border-bottom mb-5  " id="faq" style="color:rgb(59 3 135) ;">FAQs</h2> 
+        <h2 class="pb-3 pt-2 border-bottom mb-5  " id="faq" style="color:rgb(29, 1, 68) ;">FAQs</h2> 
       </div>
       <!--div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 feature-big con-or">
         <h2 class="pb-3 pt-2 border-bottom mb-5 text-black ">Contacts</h2>
