--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
           <!-- </div> -->
           <div class="col-lg-12 pr-lg-12 mr-auto mt-5 order-2 order-lg-1">
             <h2 class="" style="color: rgb(29, 1, 68);">TREND Future Development in Brief?</h2>
-            <p class="mb-4" style="color: rgb(122, 122, 122);"><B>ഭാവി എന്നു പറയുന്നത് നാം ഇന്ന് എടുക്കുന്ന തീരുമാ നങ്ങളുടെ പ്രതിഫലനമാണ്. 
+            <p class="mb-4" style="color: rgb(122, 122, 122);"><B>ഭാവി എന്നു പറയുന്നത് നാം ഇന്ന് എടുക്കുന്ന തീരുമാനങ്ങളുടെ പ്രതിഫലനമാണ്. 
                     അതിനാൽ ലോകം ഇന്ന് എവിടെ എത്തി നിൽക്കുന്നു എന്ന് തിരിച്ചറിവിൽ നിന്ന് വേണം നാം ഓരോ തീരുമാനങ്ങളും എടുക്കാൻ. 
                     നല്ലൊരു നാടിൻറെ ഭാവി എന്നത് നല്ലൊരു തലമുറയെ വാർത്തെടുക്കലാണ്. 
                     പഠിച്ച ബിരുദത്തിന് അനുസരിച്ചുള്ള ജോലി ലഭിക്കാതെ അലയുന്നവരുടെ എണ്ണം കൂടുന്നതിന് കാരണം ലോകം ഇന്ന് എവിടെ എത്തിനിൽക്കുന്നു എന്ന യാഥാർത്ഥ്യം നാം മനസ്സിലാക്കാത്തതു കൊണ്ടാണ് . 
@@ -260,7 +260,7 @@
                     ഇനി ഭാവി Artificial intelligence, blockchain, 3D printing പോലെയുള്ള ടെക്നോളജികളിൽ  ആയിരിക്കും . 
                     ഈ ടെക്നോളജികളുടെ ഇമ്പ്ലിമെന്റേഷൻ കാരണം നമ്മുടെ സമൂഹത്തിൽ നഷ്ടപ്പെടാൻ പോകുന്ന ജോലികളെക്കുറിച്ചും ഇവ മൂലം ഉടലെടുക്കാൻ പോകുന്ന വലിയ സാധ്യതകളെ കുറിച്ചും നാം നല്ല രീതിയിൽ ബോധവാന്മാരാകേണ്ടതുണ്ട്.
                      ഇതി നുവേണ്ടിയാണ് SKSSF  പാലത്തറ യൂണിറ്റിന്  കീഴിൽ  trend future development program നടക്കുന്നത്. 
-                     നമ്മുടെ നല്ലൊരുഭാവിക്ക് വേണ്ടി നിങ്ങളെ എല്ലാ വരും ഈ ഉദ്യമത്തിൽ പങ്കാളികളാകുക .</B>
+                     നമ്മുടെ നല്ലൊരുഭാവിക്ക് വേണ്ടി നിങ്ങൾ എല്ലാവരും ഈ ഉദ്യമത്തിൽ പങ്കാളികളാകുക .</B>
             </p>
           </div>
         <!-- </div> -->
