--- a/index.html
+++ b/index.html
@@ -123,10 +123,10 @@
               <sub>
 
               </h2>
-              <h3>
+              <h2>
               <span style="font-size: 1rem;font-weight: 500;"></span><span style="font-size: 1.2rem;">&nbsp;<span
-                style="background: rgb(11, 1, 29);color: white;padding: 0.2rem; letter-spacing: 9px;"><b>SKSSF</b></span><span
-                style="padding: 0.1rem;"></span></sub></a></h3>
+                style="background: rgb(11, 1, 29);color: white;padding: 0.3rem; letter-spacing: 9px; padding-left: 11px;"><b>SKSSF</b></span><span
+                style="padding: 0.1rem;"></span></sub></a></h2>
                 
          
 
@@ -259,7 +259,7 @@
                     കമ്പ്യൂട്ടർ പഠനത്തിലേകും പരിശീലനത്തിലേക്കും നാം ഊന്നൽ നൽകുമ്പോഴും സാദാ കമ്പ്യൂട്ടറുകളുടെ കാലം കഴിഞ്ഞെന്നും quantum കമ്പ്യൂട്ടറിൻറെ ദൂരം വിദൂരമല്ലെന്നും നാം തിരിച്ചറിയേണ്ടതുണ്ട്. 
                     ഇനി ഭാവി Artificial intelligence, blockchain, 3D printing പോലെയുള്ള ടെക്നോളജികളിൽ  ആയിരിക്കും . 
                     ഈ ടെക്നോളജികളുടെ ഇമ്പ്ലിമെന്റേഷൻ കാരണം നമ്മുടെ സമൂഹത്തിൽ നഷ്ടപ്പെടാൻ പോകുന്ന ജോലികളെക്കുറിച്ചും ഇവ മൂലം ഉടലെടുക്കാൻ പോകുന്ന വലിയ സാധ്യതകളെ കുറിച്ചും നാം നല്ല രീതിയിൽ ബോധവാന്മാരാകേണ്ടതുണ്ട്.
-                     ഇതി നുവേണ്ടിയാണ് SKSSF  പാലത്തറ യൂണിറ്റിന്  കീഴിൽ  trend future development program നടക്കുന്നത്. 
+                     ഇതി നുവേണ്ടിയാണ് SKSSF  പാലത്തറ യൂണിറ്റിന്  കീഴിൽ  trend future development programme നടക്കുന്നത്. 
                      നമ്മുടെ നല്ലൊരുഭാവിക്ക് വേണ്ടി നിങ്ങൾ എല്ലാവരും ഈ ഉദ്യമത്തിൽ പങ്കാളികളാകുക .</B>
             </p>
           </div>
