--- a/index.html
+++ b/index.html
@@ -247,11 +247,11 @@
               </div> -->
             <!-- </div> -->
 
-
+            <!-- rgb(29, 1, 68) -->
 
           <!-- </div> -->
           <div class="col-lg-12 pr-lg-12 mr-auto mt-5 order-2 order-lg-1">
-            <h2 class="" style="color: rgb(29, 1, 68);">Brief</h2>
+            <h2 class="" style="color: rgb(85, 187, 90);">Brief</h2>
             <p class="mb-4" style="color: rgb(122, 122, 122);"><B>ഭാവി എന്നു പറയുന്നത് നാം ഇന്ന് എടുക്കുന്ന തീരുമാനങ്ങളുടെ പ്രതിഫലനമാണ്. 
                     അതിനാൽ ലോകം ഇന്ന് എവിടെ എത്തി നിൽക്കുന്നു എന്ന് തിരിച്ചറിവിൽ നിന്ന് വേണം നാം ഓരോ തീരുമാനങ്ങളും എടുക്കാൻ. 
                     നല്ലൊരു നാടിൻറെ ഭാവി എന്നത് നല്ലൊരു തലമുറയെ വാർത്തെടുക്കലാണ്. 
@@ -268,9 +268,9 @@
         <div class="bd-example" style="height: auto; width: auto;">
           <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
             <ol class="carousel-indicators">
-              <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
-              <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
-              <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+              <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active" style="margin-top: 9px;"></li>
+              <li data-target="#carouselExampleCaptions" data-slide-to="1" style="margin-top: 9px;"></li>
+              <li data-target="#carouselExampleCaptions" data-slide-to="2" style="margin-top: 9px;"></li>
             </ol>
             <div class="carousel-inner">
               <div class="carousel-item active">
@@ -313,7 +313,7 @@
 
           <div class="col-lg-12 pr-lg-12 mr-auto mt-5 order-2 order-lg-1">
             <div class="container">
-              <h2 class="pb-3 pt-2 border-bottom mb-5 " style="color: rgb(29, 1, 68);">Roadmap</h2>
+              <h2 class="pb-3 pt-2 border-bottom mb-5 " style="color: rgb(85, 187, 90);">Roadmap</h2>
               <p>Here is a summary of our programme in general.</p>
               <!--first section-->
               <div class="row align-items-center how-it-works d-flex">
@@ -382,7 +382,7 @@
     <div class="container">
       <div class="row mb-5">
         <div class="col-12 text-center">
-          <h2 class="section-title mb-3 text-left" style="color: rgb(29, 1, 68);">What Domains You Can Choose</h2>
+          <h2 class="section-title mb-3 text-left" style="color: rgb(85, 187, 90);">What Domains You Can Choose</h2>
         </div>
       </div>
       <div class="row align-items-stretch">
@@ -395,7 +395,7 @@
             <div>
               <h3 style="color: black;">Artificial Intelligence</h3>
               
-            </div>
+            </div>b(29, 1, 68)
           </div>
 
         </div>
@@ -689,7 +689,7 @@
     <div class="row ">
 
       <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 feature-big faq-or">
-        <h2 class="pb-3 pt-2 border-bottom mb-5  " id="faq" style="color:rgb(29, 1, 68) ;">FAQs</h2> 
+        <h2 class="pb-3 pt-2 border-bottom mb-5  " id="faq" style="color:rgb(85, 187, 90) ;">FAQs</h2> 
       </div>
       <!--div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 feature-big con-or">
         <h2 class="pb-3 pt-2 border-bottom mb-5 text-black ">Contacts</h2>
