--- a/index.html
+++ b/index.html
@@ -404,7 +404,7 @@
               <!--span class="icon-wrap"><span class="text-primary icon-group"></span></span-->
             </div>
             <div>
-              <h3 style="color: black;">Artificial Intelligence</h3>
+              <h3 style="color: black;"><b> Artificial Intelligence</b></h3>
               
             </div>
           </div>
@@ -417,7 +417,7 @@
               <!--span class="icon-wrap"><span class="text-primary icon-school"></span></span-->
             </div>
             <div>
-              <h3 style="color: black;">Machine Learning</h3>
+              <h3 style="color: black;"><b> Machine Learning</b></h3>
               
 
             </div>
@@ -429,7 +429,7 @@
               <!--span class="icon-wrap"><span class="text-primary icon-book"></span></span-->
             </div>
             <div>
-              <h3 style="color: black;"><Blockquote>BlockChain</Blockquote></h3>
+              <h3 style="color: black;"><Blockquote><b> BlockChain</b></Blockquote></h3>
 
             </div>
           </div>
@@ -445,7 +445,7 @@
               <!--span class="icon-wrap"><span class="text-primary icon-group"></span></span-->
             </div>
             <div>
-              <h3 style="color: black;">Data Science</h3>
+              <h3 style="color: black;"><b> Data Science</b></h3>
               <p></p>
             </div>
           </div>
@@ -460,7 +460,7 @@
               <!--span class="icon-wrap"><span class="text-primary icon-group"></span></span-->
             </div>
             <div>
-              <h3 style="color: black;">Cyber Security</h3>
+              <h3 style="color: black;"><b> Cyber Security</b></h3>
               <p></p>
             </div>
           </div>
@@ -474,7 +474,7 @@
               <!--span class="icon-wrap"><span class="text-primary icon-group"></span></span-->
             </div>
             <div>
-              <h3 style="color: black;">Web development</h3>
+              <h3 style="color: black;"><b> Web development</b></h3>
               <p></p>
             </div>
           </div>
@@ -488,7 +488,7 @@
               <!--span class="icon-wrap"><span class="text-primary icon-group"></span></span-->
             </div>
             <div>
-              <h3 style="color: black;">Mobile App Development</h3>
+              <h3 style="color: black;"><b>Mobile App Development</b> </h3>
               <p></p>
             </div>
           </div>
@@ -501,7 +501,7 @@
               <!--span class="icon-wrap"><span class="text-primary icon-group"></span></span-->
             </div>
             <div>
-              <h3 style="color: black;">Augmented Reality / Virtual Reality</h3>
+              <h3 style="color: black;"><b>Augmented Reality / Virtual Reality</b> </h3>
               <p></p>
             </div>
           </div>
@@ -515,7 +515,7 @@
               <!--span class="icon-wrap"><span class="text-primary icon-group"></span></span-->
             </div>
             <div>
-              <h3 style="color: black;">Software Testing</h3>
+              <h3 style="color: black;"><b>Software Testing</b> </h3>
               <p></p>
             </div>
           </div>
@@ -530,7 +530,7 @@
               <!--span class="icon-wrap"><span class="text-primary icon-group"></span></span-->
             </div>
             <div>
-              <h3 style="color: black;">DevOps</h3>
+              <h3 style="color: black;"><b>DevOps</b> </h3>
               <p></p>
             </div>
           </div>
