--- a/index.html
+++ b/index.html
@@ -140,8 +140,8 @@
 
         <!-- <div class="row mb-5 site-section feature-big"> -->
 
-          <div class="col-lg-7">
-
+          <div class="">
+            <!-- <col-lg-7></col-lg-7> -->
             
             
               <div>
