--- a/index.html
+++ b/index.html
@@ -255,11 +255,11 @@
           <!-- <div class="container"  > -->
           <div class="bd-example" style="height: auto; width: auto;">
             <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
-              <!-- <ol class="carousel-indicators">
-                <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active" style="margin-top: 9px;"></li>
-                <li data-target="#carouselExampleCaptions" data-slide-to="1" style="margin-top: 9px;"></li>
-                <li data-target="#carouselExampleCaptions" data-slide-to="2" style="margin-top: 9px;"></li>
-              </ol> -->
+              <ol class="carousel-indicators">
+                <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active" ></li>
+                <li data-target="#carouselExampleCaptions" data-slide-to="1" ></li>
+                <li data-target="#carouselExampleCaptions" data-slide-to="2" ></li>
+              </ol>
               <div class="carousel-inner">
                 <div class="carousel-item active">
                   <img src="https://socialwaves.in/assets/titles/541bb526414c7ce82720fb16a648a507.jpg" class="d-block w-100" alt="...">
