--- a/index.html
+++ b/index.html
@@ -417,7 +417,7 @@
               <!--span class="icon-wrap"><span class="text-primary icon-group"></span></span-->
             </div>
             <div>
-              <h3 style="color: black;"><b> Artificial Intelligence</b></h3>
+              <h3 style="color: black;">Artificial Intelligence</h3>
               
             </div>
           </div>
@@ -430,7 +430,7 @@
               <!--span class="icon-wrap"><span class="text-primary icon-school"></span></span-->
             </div>
             <div>
-              <h3 style="color: black;"><b> Machine Learning</b></h3>
+              <h3 style="color: black;"> Machine Learning</h3>
               
 
             </div>
@@ -442,7 +442,7 @@
               <!--span class="icon-wrap"><span class="text-primary icon-book"></span></span-->
             </div>
             <div>
-              <h3 style="color: black;"><Blockquote><b> BlockChain</b></Blockquote></h3>
+              <h3 style="color: black;"><Blockquote> BlockChain</Blockquote></h3>
 
             </div>
           </div>
@@ -458,7 +458,7 @@
               <!--span class="icon-wrap"><span class="text-primary icon-group"></span></span-->
             </div>
             <div>
-              <h3 style="color: black;"><b> Data Science</b></h3>
+              <h3 style="color: black;">Data Science</h3>
               <p></p>
             </div>
           </div>
@@ -473,7 +473,7 @@
               <!--span class="icon-wrap"><span class="text-primary icon-group"></span></span-->
             </div>
             <div>
-              <h3 style="color: black;"><b> Cyber Security</b></h3>
+              <h3 style="color: black;"> Cyber Security</h3>
               <p></p>
             </div>
           </div>
@@ -487,7 +487,7 @@
               <!--span class="icon-wrap"><span class="text-primary icon-group"></span></span-->
             </div>
             <div>
-              <h3 style="color: black;"><b> Web development</b></h3>
+              <h3 style="color: black;">Web development</h3>
               <p></p>
             </div>
           </div>
@@ -501,7 +501,7 @@
               <!--span class="icon-wrap"><span class="text-primary icon-group"></span></span-->
             </div>
             <div>
-              <h3 style="color: black;"><b>Mobile App Development</b> </h3>
+              <h3 style="color: black;">Mobile App Development</h3>
               <p></p>
             </div>
           </div>
@@ -514,7 +514,7 @@
               <!--span class="icon-wrap"><span class="text-primary icon-group"></span></span-->
             </div>
             <div>
-              <h3 style="color: black;"><b>Augmented Reality / Virtual Reality</b> </h3>
+              <h3 style="color: black;">Augmented Reality / Virtual Reality </h3>
               <p></p>
             </div>
           </div>
@@ -528,7 +528,7 @@
               <!--span class="icon-wrap"><span class="text-primary icon-group"></span></span-->
             </div>
             <div>
-              <h3 style="color: black;"><b>Software Testing</b> </h3>
+              <h3 style="color: black;">Software Testing </h3>
               <p></p>
             </div>
           </div>
@@ -543,7 +543,7 @@
               <!--span class="icon-wrap"><span class="text-primary icon-group"></span></span-->
             </div>
             <div>
-              <h3 style="color: black;"><b>DevOps</b> </h3>
+              <h3 style="color: black;">DevOps</h3>
               <p></p>
             </div>
           </div>
