up button removed

--- a/index.html
+++ b/index.html
@@ -137,9 +137,9 @@
 
         </div>
       </div>
-      <button onclick="topFunction()" class="aa" id="myBtn" title="Go to top"><span
+      <!-- <button onclick="topFunction()" class="aa" id="myBtn" title="Go to top"><span
           class="lnr lnr-chevron-up"></span></button>
-      <div class="site-section " id="features-section1">
+      <div class="site-section " id="features-section1"> -->
 
 
 
