--- a/index.html
+++ b/index.html
@@ -138,8 +138,9 @@
         </div>
       </div>
       <!-- <button onclick="topFunction()" class="aa" id="myBtn" title="Go to top"><span
-          class="lnr lnr-chevron-up"></span></button>
-      <div class="site-section " id="features-section1"> -->
+          class="lnr lnr-chevron-up"></span></button> -->
+          
+      <div class="site-section " id="features-section1">
 
 
 
