--- a/index.html
+++ b/index.html
@@ -185,21 +185,21 @@
               </ol>
               <div class="carousel-inner">
                 <div class="carousel-item active">
-                  <img src="https://socialwaves.in/assets/titles/541bb526414c7ce82720fb16a648a507.jpg" class="d-block w-100" alt="...">
+                  <img src="/videos/WhatsApp Image 2022-09-22 at 20.22.20.jpeg" class="d-block w-100" alt="...">
                   <div class="carousel-caption d-none d-md-block">
                     <!-- <h5>First slide label</h5>
                     <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p> -->
                   </div>
                 </div>
                 <div class="carousel-item">
-                  <img src="https://socialwaves.in/assets/titles/541bb526414c7ce82720fb16a648a507.jpg" class="d-block w-100" alt="...">
+                  <img src="/videos/WhatsApp Image 2022-09-22 at 20.22.20.jpeg" class="d-block w-100" alt="...">
                   <div class="carousel-caption d-none d-md-block">
                     <!-- <h5>Second slide label</h5>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p> -->
                   </div>
                 </div>
                 <div class="carousel-item">
-                  <img src="https://socialwaves.in/assets/titles/541bb526414c7ce82720fb16a648a507.jpg" class="d-block w-100" alt="...">
+                  <img src="/videos/WhatsApp Image 2022-09-22 at 20.22.20.jpeg" class="d-block w-100" alt="...">
                   <div class="carousel-caption d-none d-md-block">
                     <!-- <h5>Third slide label</h5>
                     <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p> -->
@@ -302,9 +302,9 @@
                     നല്ലൊരു നാടിൻറെ ഭാവി എന്നത് നല്ലൊരു തലമുറയെ വാർത്തെടുക്കലാണ്. 
                     പഠിച്ച ബിരുദത്തിന് അനുസരിച്ചുള്ള ജോലി ലഭിക്കാതെ അലയുന്നവരുടെ എണ്ണം കൂടുന്നതിന് കാരണം ലോകം ഇന്ന് എവിടെ എത്തിനിൽക്കുന്നു എന്ന യാഥാർത്ഥ്യം നാം മനസ്സിലാക്കാത്തതു കൊണ്ടാണ് . 
                     കമ്പ്യൂട്ടർ പഠനത്തിലേകും പരിശീലനത്തിലേക്കും നാം ഊന്നൽ നൽകുമ്പോഴും സാദാ കമ്പ്യൂട്ടറുകളുടെ കാലം കഴിഞ്ഞെന്നും <b>Quantum</b> കമ്പ്യൂട്ടറിൻറെ ദൂരം വിദൂരമല്ലെന്നും നാം തിരിച്ചറിയേണ്ടതുണ്ട്. 
-                    ഇനി ഭാവി <b>Artificial Intelligence, Blockchain</b>, <b> Printing</b> പോലെയുള്ള ടെക്നോളജികളിൽ  ആയിരിക്കും . 
+                    ഇനി ഭാവി <b>Artificial Intelligence, Blockchain</b>, <b>3D Printing</b> പോലെയുള്ള ടെക്നോളജികളിൽ  ആയിരിക്കും . 
                     ഈ ടെക്നോളജികളുടെ ഇമ്പ്ലിമെന്റേഷൻ കാരണം നമ്മുടെ സമൂഹത്തിൽ നഷ്ടപ്പെടാൻ പോകുന്ന ജോലികളെക്കുറിച്ചും ഇവ മൂലം ഉടലെടുക്കാൻ പോകുന്ന വലിയ സാധ്യതകളെ കുറിച്ചും നാം നല്ല രീതിയിൽ ബോധവാന്മാരാകേണ്ടതുണ്ട്.
-                     ഇതി നുവേണ്ടിയാണ് <B>SKSSF </B> പാലത്തറ യൂണിറ്റിന്  കീഴിൽ  <b>Trend Future Development Programme</b> നടക്കുന്നത്. 
+                    ഇതിന് വേണ്ടിയാണ് <B>SKSSF </B> പാലത്തറ യൂണിറ്റിന്  കീഴിൽ  <b>Trend Future Development Programme</b> നടക്കുന്നത്. 
                      നമ്മുടെ നല്ലൊരുഭാവിക്ക് വേണ്ടി നിങ്ങൾ എല്ലാവരും ഈ ഉദ്യമത്തിൽ പങ്കാളികളാകുക .</B>
             </p>
           
