--- a/index.html
+++ b/index.html
@@ -185,21 +185,21 @@
               </ol>
               <div class="carousel-inner">
                 <div class="carousel-item active">
-                  <img src="/videos/WhatsApp Image 2022-09-22 at 20.22.20.jpeg" class="d-block w-100" alt="...">
+                  <img src="/videos/Picsart_22-09-23_15-46-33-895.png" class="d-block w-100" alt="...">
                   <div class="carousel-caption d-none d-md-block">
                     <!-- <h5>First slide label</h5>
                     <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p> -->
                   </div>
                 </div>
                 <div class="carousel-item">
-                  <img src="/videos/WhatsApp Image 2022-09-22 at 20.22.20.jpeg" class="d-block w-100" alt="...">
+                  <img src="/videos/Picsart_22-09-23_15-46-33-895.png" class="d-block w-100" alt="...">
                   <div class="carousel-caption d-none d-md-block">
                     <!-- <h5>Second slide label</h5>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p> -->
                   </div>
                 </div>
                 <div class="carousel-item">
-                  <img src="/videos/WhatsApp Image 2022-09-22 at 20.22.20.jpeg" class="d-block w-100" alt="...">
+                  <img src="/videos/Picsart_22-09-23_15-46-33-895.png" class="d-block w-100" alt="...">
                   <div class="carousel-caption d-none d-md-block">
                     <!-- <h5>Third slide label</h5>
                     <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p> -->
@@ -335,7 +335,7 @@
               <!--span class="icon-wrap"><span class="text-primary icon-group"></span></span-->
             </div>
             <div>
-              <h3 style="color: black;">Artificial Intelligence</h3>
+             <a href="https://www.youtube.com/watch?v=UwsrzCVZAb8&t=363s"> <h3 style="color: black;">Artificial Intelligence</h3></a>
               
             </div>
           </div>
@@ -348,7 +348,7 @@
               <!--span class="icon-wrap"><span class="text-primary icon-school"></span></span-->
             </div>
             <div>
-              <h3 style="color: black;"> Machine Learning</h3>
+             <a href="https://www.youtube.com/watch?v=vpm8T-JhOjo"> <h3 style="color: black;"> Machine Learning</h3></a>
               
 
             </div>
@@ -360,7 +360,7 @@
               <!--span class="icon-wrap"><span class="text-primary icon-book"></span></span-->
             </div>
             <div>
-              <h3 style="color: black;"><Blockquote> BlockChain</Blockquote></h3>
+              <a href="https://www.youtube.com/watch?v=dTrsFRInpK4"><h3 style="color: black;"><Blockquote> BlockChain</Blockquote></h3></a>
 
             </div>
           </div>
@@ -376,7 +376,7 @@
               <!--span class="icon-wrap"><span class="text-primary icon-group"></span></span-->
             </div>
             <div>
-              <h3 style="color: black;">Data Science</h3>
+              <a href="https://www.youtube.com/watch?v=RBSUwFGa6Fk"><h3 style="color: black;">Data Science</h3></a>
               <p></p>
             </div>
           </div>
@@ -391,7 +391,7 @@
               <!--span class="icon-wrap"><span class="text-primary icon-group"></span></span-->
             </div>
             <div>
-              <h3 style="color: black;"> Cyber Security</h3>
+             <a href="https://www.youtube.com/watch?v=ZFVvjgJX1wk"> <h3 style="color: black;"> Cyber Security</h3></a>
               <p></p>
             </div>
           </div>
@@ -405,7 +405,7 @@
               <!--span class="icon-wrap"><span class="text-primary icon-group"></span></span-->
             </div>
             <div>
-              <h3 style="color: black;">Web development</h3>
+              <a href="https://www.youtube.com/watch?v=8KaJRw-rfn8"><h3 style="color: black;">Web development</h3></a>
               <p></p>
             </div>
           </div>
@@ -419,7 +419,7 @@
               <!--span class="icon-wrap"><span class="text-primary icon-group"></span></span-->
             </div>
             <div>
-              <h3 style="color: black;">Mobile App Development</h3>
+              <a href="https://www.youtube.com/watch?v=oPNcTN2l21g"><h3 style="color: black;">Mobile App Development</h3></a>
               <p></p>
             </div>
           </div>
@@ -432,7 +432,7 @@
               <!--span class="icon-wrap"><span class="text-primary icon-group"></span></span-->
             </div>
             <div>
-              <h3 style="color: black;">Augmented Reality / Virtual Reality </h3>
+             <a href="https://www.youtube.com/watch?v=E0QLVj9FJ0A"> <h3 style="color: black;">Augmented Reality / Virtual Reality </h3></a>
               <p></p>
             </div>
           </div>
@@ -446,7 +446,7 @@
               <!--span class="icon-wrap"><span class="text-primary icon-group"></span></span-->
             </div>
             <div>
-              <h3 style="color: black;">Software Testing </h3>
+              <a href="https://www.youtube.com/watch?v=rhE45ihB26E"><h3 style="color: black;">Software Testing </h3></a>
               <p></p>
             </div>
           </div>
@@ -461,7 +461,7 @@
               <!--span class="icon-wrap"><span class="text-primary icon-group"></span></span-->
             </div>
             <div>
-              <h3 style="color: black;">DevOps</h3>
+              <a href="https://www.youtube.com/watch?v=Xrgk023l4lI"><h3 style="color: black;">DevOps</h3></a>
               <p></p>
             </div>
           </div>
