--- a/index.html
+++ b/index.html
@@ -481,7 +481,7 @@
        </div>
 
 
-
+<!-- 
        <div class="container">
         <div class="row mb-5">
           <div class="col-12 ">
@@ -495,7 +495,7 @@
   
             </div>
         </div>
-      </div>
+      </div> -->
 
       
       <div class="container">
@@ -532,7 +532,7 @@
                     <a href="mailto:trend.palathara.skssf@gmail.com">trend.palathara.skssf@gmailcom</a>
                   </span>
                 </div>
-              </div >
+              </div>
             </div> 
 
              <div class="dis-flex size1 p-b-47" style="padding-right: 150px;">
