--- a/index.html
+++ b/index.html
@@ -128,7 +128,15 @@
   <!-- End Google Tag Manager -->
 
 
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-T56PB53QDK"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'G-T56PB53QDK');
+</script>
 
 </head>
 
@@ -501,7 +509,7 @@
        </div>
 
 
-
+<!-- 
        <div class="container">
         <div class="row mb-5">
           <div class="col-12 ">
@@ -515,7 +523,7 @@
   
             </div>
         </div>
-      </div>
+      </div> -->
 
       
       <div class="container">
