--- a/index.html
+++ b/index.html
@@ -506,7 +506,7 @@
        </div>
 
 
-
+<!-- 
        <div class="container">
         <div class="row mb-5">
           <div class="col-12 ">
@@ -527,7 +527,7 @@
   
             </div>
         </div>
-      </div>
+      </div> -->
 
       
       <div class="container">
